--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -9,7 +9,7 @@
          processIsolation="false"
          stopOnFailure="false"
          syntaxCheck="false"
-         bootstrap="autoload.php"
+         bootstrap="test/autoload.php"
         >
     <php>
         <ini name="intl.default_locale" value="en"/>
@@ -21,7 +21,7 @@
 
     <!--
         <logging>
-            <log type="coverage-html" target="build/coverage" title="MWP Worker" charset="UTF-8" yui="true" highlight="true"
+            <log type="coverage-html" target="build/coverage" title="Oxygen" charset="UTF-8" yui="true" highlight="true"
                  lowUpperBound="35" highLowerBound="70"/>
             <log type="coverage-clover" target="build/logs/clover.xml"/>
             <log type="junit" target="build/logs/junit.xml" logIncompleteSkipped="false"/>
