--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,6 @@
     },
     "require": {
         "symfony/console": "^2.7.3",
-        "knplabs/github-api": "^1.4.14",
-        "d11wtq/boris": "^1.0.10"
+        "knplabs/github-api": "^1.4.14"
     }
 }
